Added a refactoring for the modules and changed the test dependencies so that they actually run